arkts_static_test/14_Ambient_Declarations/ets_cases/14.1_Ambient_Constant_or_Variable_Declarations/compile-pass/AMB_14_01_010_PASS_MULTIPLE_CONST.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id AMB_14_01_010_PASS_MULTIPLE_CONST
 * @expect compile-pass
 * @section 14.1
 * @design declare const 多变量声明，逗号分隔，每项均有显式类型注解，无初始化器
 * @note 正向用例：验证 ambient const 多声明语法编译通过
 */
declare const a: int, b: string, c: boolean
